--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <h2>목차</h2>
     <ul>
       <a id="toc" href="#h-1">1</a>.개요<br>
-      2.성향<br>
-      3.취향<br>
-      4.기타<br>
+      <a href="#h-2">2</a>.성향<br>
+      <a href="#h-3">3</a>.취향<br>
+      <a href="#h-4">4</a>.기타<br>
       </ul>
       </div>
 
