Javascript features added
onload event, day or night feature updated.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>대한민국 출신의 개발자 지망생이다. 음향 엔지니어링, 사진, 영상 등 다양한 작업을 해 왔다. <br> 안목과 추진력은 썩 괜찮다고 자평하는듯 하지만 뒷심 부족이라는 성격적인 단점이 있는 인물.<del>썩 괜찮은걸로는 살아남기 힘든 세상이다.</del></div>
 </p>
       <h2 class="wiki-heading">
-          <a id="h-2" href="#toc">2.</a> 성향
+        <a id="h-2" href="#toc">2.</a> 성향
           </h2>
       <div class="wiki-heading-content">
         <p>낙관적인 인물로, 머릿속이 꽃밭이라는 말을 자주 듣는다. <del>편협한 취향때문에 정말 얼마안되는</del> 좋아하는것에 과하게 집착하는 경향이 있으며, 관그 밖의 행사에는 관심이 별로 없는 듯. <br>국가나 민족, 공동체 같은 개념보다 모든 개인, 그들의 선량함과 창의력 그리고 가능성을 중요하게 여기는 듯 하다.</p>
@@ -66,7 +66,7 @@
               <a id="h-3" href="#toc">3.</a> 취향
               </h2>
       <div class="wiki-heading-content">
-        <p>마이클 잭슨의 팬이었던 아버지 덕에 어릴때부터 음악을 많이 접했다. 버벌진트와 콜드플레이의 음악이 그의 10대를 지배했고, 친구들과 콜드플레이의 첫 내한공연에 갔던건 인생에 가장 좋은 기억중의 하나라고 한다. 빌 에반스를 처음 접한 시기에는 그의 안경낀 모습에 홀려서 안경을 다시 껴볼까 진지하게 고민을 했다고.(최규흠은 어렸을 때 안경과 렌즈를 착용했으나 23살에 시력교정수술을 한 이후로는 끼지 않는다) 그의 말에 따르면 재즈는 무적이다. 마일스는 신이고.   최근에 즐겨 듣는 뮤지션은 FKJ, Donna missal, Tom odell 이라고 한다.</p>
+        <p>마이클 잭슨의 팬이었던 아버지 덕에 어릴때부터 음악을 많이 접했다. 버벌진트와 콜드플레이의 음악이 그의 10대를 지배했고, 친구들과 콜드플레이의 첫 내한공연에 갔던건 인생에 가장 좋은 기억중의 하나라고 한다. 나얼을 따라 머리를 박박 밀까 고민했었고<del>정작 돈스파이크를 닮아서 안밀었다고 한다.</del> 빌 에반스를 처음 접한 시기에는 그의 안경낀 모습에 홀려서 안경을 다시 껴볼까, 존 메이어를 처음 접한 시기에는 문신을 할까 진지하게 고민을 했다고.(최규흠은 어렸을 때 안경과 렌즈를 착용했으나 23살에 시력교정수술을 한 이후로는 끼지 않으며 문신을 싫어한다.) 그의 말에 따르면 재즈는 무적이다. 마일스는 신이고.   최근에 즐겨 듣는 뮤지션은 FKJ, Donna missal, Tom odell, john mayer 라고 한다.</p>
         <p>음악에서는 장르나 사조에 크게 연연하지 않지만 그림과 영화, 사진등의 시각 컨텐츠에는 유독 넓은 다이내믹과 명암대비, 로우키, 낮은 채도에 집착한다. 그의 생각에는 인스타그램과 유튜브가 사람들의 심미안을 망치고 있다고 한다. 알록달록한 불량식품을 시각으로 소비하는 행위로 인해 사람들의 정신연령이 퇴화하는 것처럼 느낀다고.</p>
       </div>
         <h2 class="wiki-heading">
@@ -74,11 +74,14 @@
             </h2>
         <div class="wiki-heading-content">
         <p><del>비비킹, 에릭클랩튼, 존메이어 등의 블루스 기반 기타리스트에 열광한다. Fender사의 stratocaster 모델을 보유하고 있다. ultra라인 Texas tea 피니쉬로, 검은색 바디에 은근슬쩍 보이는 금색펄을 보고 반해서는 보유하던 렌즈를 팔고 구입했다. </del></p>
-        <p>코로나로 인한 칩거생활로 살이 많이 올랐다. 인생 최대무게를 경신한것 같다고. 최근 스트리머 랄로를 닮았다는 평을 듣고 있다.</p>
-        <p>게임을 즐겨한다. 디아블로2 레저렉션의 발매 후 위코드 사전스터디 일정 직전까지 게임폐인 생활을 한듯.
+        <p>코로나로 인한 칩거생활로 살이 많이 올랐다. 인생 최대무게를 경신한것 같다고. 최근 스트리머 랄로를 닮았다는 평을 듣고 있다. <del>2400! 2400!</del></p>
+        <p>게임을 즐겨한다. 최근 재미있게 한 게임은 디아블로 레저렉션, 젤다의 전설이다.</p>
+        <p></p>
         </div>
-
-
+    
+        <script src="hwiki.js">
+        </script>
+        
 
 
 
